Attempt to fix font issues on iPhone

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,3 +33,7 @@ div.toc li {
 div.toc h3 {
 	font: bold 12px/1.2 Roboto, sans-serif;
 }
+
+code {
+  display: inline;
+}
